@@ -638,8 +638,17 @@ class MavenBuildSystem implements BuildSystem {
 			s = s.replaceAll(Pattern.quote("standalone=\"no\"?><"), "standalone=\"no\"?>" + IOUtils.LINE_SEPARATOR + "<");
 		}
 
-		s = s.replace("<repositories>%n\t\t%n\t</repositories>".formatted(),
-				"<repositories>%n\t</repositories>".formatted());
+		if (s.contains("<?xml version=\"1.0\" encoding=\"UTF-8\" standalone=\"no\"?>")) {
+			s = s.replaceAll(Pattern.quote("<?xml version=\"1.0\" encoding=\"UTF-8\" standalone=\"no\"?>"),
+					"<?xml version=\"1.0\" encoding=\"UTF-8\"?>");
+		}
+
+		if (s.contains("--><project ")) {
+			s = s.replaceAll(Pattern.quote("--><project "), "-->" + IOUtils.LINE_SEPARATOR + "<project ");
+		}
+
+		s = s.replace(String.format("<repositories>%n\t\t%n\t</repositories>"),
+				String.format("<repositories>%n\t</repositories>"));
 
 		if (!s.endsWith(IOUtils.LINE_SEPARATOR)) {
 			s += IOUtils.LINE_SEPARATOR;
